--- a/design3.css
+++ b/design3.css
@@ -4,7 +4,6 @@ body {
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
-    padding-bottom: 550px;
 }
 
 .iconbar {
@@ -67,7 +66,7 @@ ol {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 65px;
+    margin: 65px 65px 60px; 
 }
 
 .image {
@@ -117,6 +116,7 @@ ol {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-bottom: 20px;
 }
 
 .button:hover {
@@ -128,10 +128,8 @@ footer {
     color: #666;
     text-align: center;
     padding: 10px 0;
-    position: fixed; 
-    bottom: 0;
     width: 100%;
-    left: 0;
+    margin-top: 32%;
 }
 
 @media screen and (max-width: 767px) {
@@ -146,6 +144,10 @@ footer {
 
     body {
         padding-bottom: 20%;
+    }
+
+    footer {
+        position: static;
     }
 
 }
