--- a/design3.css
+++ b/design3.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+} 
+
 body {
     background-color: #efe5e3;
     margin: 0;
@@ -66,7 +70,7 @@ ol {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: 65px 65px 60px; 
+    margin: 65px 20px 60px; 
 }
 
 .image {
@@ -112,7 +116,7 @@ ol {
     text-align: center;
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 16px;
+    font-size: 1rem;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -130,6 +134,7 @@ footer {
     padding: 10px 0;
     width: 100%;
     margin-top: 32%;
+    position: relative;
 }
 
 @media screen and (max-width: 767px) {
@@ -140,6 +145,11 @@ footer {
         padding: 0 20px; 
         font-size: 16px; 
         line-height: 1.6; 
+    }
+
+    .button {
+        max-width: 100%;
+        font-size: smaller;
     }
     
     footer {
